unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/EventApi__Waitlist_Entry__c.object-meta.xml
<CustomObject>
    <description>Waitlist Entry store the Contact Information for people who want to be notified when any available ticket/registrations become open either for a Event or a Schedule Item at an Event.</description>
    <label>Waitlist Entry</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Waitlist Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlist Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>