unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to related Contact. Derived from email fields matching a Contact record through query.</description>
    <inlineHelpText>** System Calculated Override ** Link to related Contact. Derived from email fields matching a Contact record through query.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Waitlist_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>