unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Date_Added__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Date_Added__c</fullName>
    <description>** System Calculated Required Override ** The date the Waitlist Entry was added. Defaults to the day the record was created in the database.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the Waitlist Entry was added. Defaults to the day the record was created in the database.</inlineHelpText>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>