unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Email__c</fullName>
    <description>** System Calculated Required Override ** Email address to send related notifications to the Waitlist Contact. Derives from the linked Contact&#39;s &quot;Preferred Email&quot; address.</description>
    <inlineHelpText>** System Calculated Required Override ** Email address to send related notifications to the Waitlist Contact. Derives from the linked Contact&#39;s &quot;Preferred Email&quot; address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>