unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to related Event. Required for &quot;Event&quot; Waitlist Entries.</description>
    <inlineHelpText>** Conditionally Required ** Link to related Event. Required for &quot;Event&quot; Waitlist Entries.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Waitlist</relationshipLabel>
    <relationshipName>Waitlist_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>