unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Full_Name__c</fullName>
    <description>Displayed on Event Registration UI to allow registrant to input their name.</description>
    <inlineHelpText>Displayed on Event Registration UI to allow registrant to input their name</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>