unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Is_Registered__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Waitlist Entries that have registered for the Event or Schedule Item successfully after notification will have this checkbox checked automatically.</description>
    <inlineHelpText>Waitlist Entries that have registered for the Event or Schedule Item successfully after notification will have this checkbox checked automatically.</inlineHelpText>
    <label>Is Registered</label>
    <type>Checkbox</type>
</CustomField>