unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Message__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Message__c</fullName>
    <description>Optional message that can be populated by the Waitlist Contact on Waitlist opt-in pages.</description>
    <inlineHelpText>Optional message that can be populated by the Waitlist Contact on Waitlist opt-in pages.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>