unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Waitlist Entry has been notified of tickets becoming available.</description>
    <inlineHelpText>When checked, the Waitlist Entry has been notified of tickets becoming available.</inlineHelpText>
    <label>Notification Sent</label>
    <type>Checkbox</type>
</CustomField>