unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Notified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Notified_Date_Time__c</fullName>
    <description>** System Calculated ** The date and time the Waitlist Entry was notified of availability.</description>
    <inlineHelpText>** System Calculated ** The date and time the Waitlist Entry was notified of availability.</inlineHelpText>
    <label>Notified Date/Time</label>
    <type>DateTime</type>
</CustomField>