unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Other_Phone__c</fullName>
    <description>Optional alternate phone for the Waitlist Contact.</description>
    <inlineHelpText>Optional alternate phone for the Waitlist Contact.</inlineHelpText>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>