unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Phone__c</fullName>
    <description>** System Calculated Required Override ** Primary Contact Phone. Derives from the linked Contact&#39;s &quot;Preferred Phone&quot;.</description>
    <inlineHelpText>** System Calculated Required Override ** Primary Contact Phone. Derives from the linked Contact&#39;s &quot;Preferred Phone&quot;.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>