unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Priority__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Priority__c</fullName>
    <description>The priority of a Waitlist Entry determines who the system will notify first when tickets become available. Defaults &quot;Medium&quot;.</description>
    <inlineHelpText>The priority of a Waitlist Entry determines who the system will notify first when tickets become available. Defaults &quot;Medium&quot;.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>