unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Requested__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of tickets requested for purchase.</description>
    <inlineHelpText>The number of tickets requested for purchase.</inlineHelpText>
    <label>Quantity Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>