unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to related Schedule Item. Required for &quot;Schedule Item&quot; Waitlist Entries.</description>
    <inlineHelpText>** Conditionally Required ** Link to related Schedule Item. Required for &quot;Schedule Item&quot; Waitlist Entries.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Waitlist</relationshipLabel>
    <relationshipName>Waitlist_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>