unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Status__c</fullName>
    <description>The current status of the Waitlist Entry. Defaults to &quot;Waiting&quot;.</description>
    <inlineHelpText>The current status of the Waitlist Entry. Defaults to &quot;Waiting&quot;.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Notified</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Notified - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>