unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to related Ticket Type. Required for &quot;Ticket Type&quot; Waitlist Entries.</description>
    <inlineHelpText>** Conditionally Required ** Link to related Ticket Type. Required for &quot;Ticket Type&quot; Waitlist Entries.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Waitlist</relationshipLabel>
    <relationshipName>Waitlist_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>