unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/LTE__Free_Event_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>LTE__Free_Event_Order_Number__c</fullName>
    <description>**System Calculated** a unique key to save the order number for Free Events.</description>
    <inlineHelpText>**System Calculated** a unique key to save the order number for Free Events.</inlineHelpText>
    <label>SYSTEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>