unpackaged/main/default/objects/EventApi__Waitlist_Entry__c/fields/LTE__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>LTE__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked the to related Sales Order.</description>
    <inlineHelpText>Linked the to related Sales Order.</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>